Fix some breaks on Activity.

--- a/application/static/css/style.css
+++ b/application/static/css/style.css
@@ -202,4 +202,6 @@ ul.about {
 
 .item-content ul {
     list-style: none;
+    margin: 0;
+    padding: 0;
 }
